# wiregen

./: Cargo.toml  LICENSE  README.md
examples/: array.rs  enum.rs  fps.rs  quant.rs  struct.rs
src/: crate_parser.rs  main.rs  model.rs
