[package]
name = "wiregen"
version = "0.1.1"
authors = ["Nikita Lesnikov <n_lesnikov@wargaming.net>"]
build = "build.rs"

[dependencies]
clap = "2.26.2"
askama = "0.6.0"
synom = "0.11.3"
linear-map = "1.2.0"
quote = "0.3.15"
failure = "0.1.1"

[build-dependencies]
askama = "0.6.0"

[dependencies.syn]
version = "0.11.11"
features = ["full", "parsing", "printing"]